# spud

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CNAME  README.md  format.ps1  xmake.lua
.github/workflows/: benchmark.yaml  build-and-test.yaml  ci.yaml  publish-docs.yaml
benchmark/: compare.cc  simple.cc  test.cc
dev/bench/: data.js
docs/: astro.config.mjs  package.json  pnpm-lock.yaml
docs/src/content/docs/: index.mdx
docs/src/content/docs/guides/: detour.md  getting-started.mdx  pattern-search.md  signature-search.md
docs/src/styles/: custom.css
include/spud/: arch.h  detour.h  pattern.h  signature.h  utils.h
include/spud/details/: function_traits.h
include/spud/memory/: protection.h
scripts/: format.sh
src/: utils.cc  zydis_utils.cc  zydis_utils.h
src/detour/: aarch64.cc  aarch64.h  detour.cc  detour_impl.h  fwd.h  remapper.cc  remapper.h  x86_64.cc  x86_64.h
src/detour/aarch64/: aarch64.cc  aarch64.h  detour.S  relocators.cc  relocators.h
src/detour/x86_64/: detour.S  detour_context_support.asm  relocators.cc  relocators.h  x86_64.cc  x86_64.h
src/memory/: protection.cc
src/pattern/: pattern.cc  pattern_avx2.cc  pattern_sse.cc
src/signature/: signature.cc  signature_avx2.cc  signature_neon.cc  signature_sse.cc
tests/: main.cc  pattern.cc  signature.cc  test_util.h
tests/detour/arm64/simple/: simple.cc  tests.S
tests/detour/shared/: basic.cc
tests/detour/x86_64/simple/: simple.cc  tests.S  tests.asm
tests/x86_64/simple/: simple.cc  tests.S  tests.asm
